--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
     <artifactId>apitest-core</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
-        <!-- junit -->
+        <!-- testng -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.2</version>
             <scope>test</scope>
         </dependency>
         <!-- rest-assured -->
@@ -22,9 +22,27 @@
             <version>3.0.7</version>
             <scope>test</scope>
         </dependency>
+        <!-- jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.5</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
-
 
 
 </project>
