--- a/pom.xml
+++ b/pom.xml
@@ -15,34 +15,69 @@
             <version>6.14.2</version>
             <scope>test</scope>
         </dependency>
-        <!-- rest-assured -->
-        <dependency>
-            <groupId>io.rest-assured</groupId>
-            <artifactId>rest-assured</artifactId>
-            <version>3.0.7</version>
-            <scope>test</scope>
-        </dependency>
         <!-- jackson-databind -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.9.5</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <!-- lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.20</version>
             <scope>provided</scope>
         </dependency>
+        <!-- assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.10.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- rest-assured -->
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.10.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
-
-
+    <build>
+            <plugins>
+                <!-- maven-compiler-plugin-->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
+                <!-- assertj-core plugin-->
+                <plugin>
+                    <groupId>org.assertj</groupId>
+                    <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
+                    <version>2.1.0</version>
+                    <configuration>
+                        <classes>
+                            <param>models.pet.PetModel</param>
+                        </classes>
+                        <targetDir>${project.basedir}/src/main/java/assertions</targetDir>
+                        <generateAssertionsForAllFields>true</generateAssertionsForAllFields>
+                        <generateAssertions>true</generateAssertions>
+                        <generateBddAssertions>false</generateBddAssertions>
+                        <generateSoftAssertions>false</generateSoftAssertions>
+                        <generateJUnitSoftAssertions>false</generateJUnitSoftAssertions>
+                    </configuration>
+                </plugin>
+            </plugins>
+    </build>
 </project>
